--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ canvas{
     }
 body{
     background-image: url(background.png) !important;
+    background-image: background !important;
 }
 
 @keyframes example{
